同步于: 12月10日21时52分

--- a/pages/p1/955342.md
+++ b/pages/p1/955342.md
@@ -1,4 +1,4 @@
-### 短跑名将张培萌被妻控家暴 冲上热搜(组图)
+### 黑龙江爆出2例本土确诊 急启三级响应(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="短跑名将张培萌被妻张漠寒微博发文指控家暴（图片来源：微博截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2797991a531345249-ss.jpg" style="height:339px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="黑龙江东宁市及绥芬河市10日爆出各新增1例本土确诊（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-10/p2835561a398035553-ss.jpg" style="height:339px; width:600px"/>
   <br>
-   短跑名将张培萌被妻张漠寒微博发文指控家暴（图片来源：微博截图）
+   黑龙江东宁市及绥芬河市10日爆出各新增1例本土确诊（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,67 +21,64 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月16日讯】日前，中国短跑名将
+  【看中国2020年12月10日讯】（看中国记者文俪综合报导）中国大陆
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/张培萌" target="_blank">
-    张培萌
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
   </strong>
-  被控
+  疫情持续升温，近日不仅四川爆出多宗本土确诊，
   <strong>
-   家暴
+   黑龙江东宁市
   </strong>
-  的消息冲上了微博热搜。张培萌妻子
+  及
   <strong>
-   张漠寒
+   绥芬河
   </strong>
-  微博发文控诉，自结婚后多次遭受丈夫家暴，连怀孕期间也难逃厄运。并且上传了大量照片来佐证家暴的事实。目前，张漠寒已经正式提出
+  市也于今日（10日）爆出各新增1例本土确诊。牡丹江市、东宁市立即启动三级应急响应，绥芬河市则再次
   <strong>
-   离婚
+   封城
   </strong>
-  诉讼。而张培萌方面则回应称：“婚外关系”纯属子虚乌有。
+  ，进入严管时期。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  张漠寒15日下午5点左右在微博发文指，她与张培萌去年6月份结婚，婚后育有一女。张漠寒在文中指控，无论是婚前还是婚后，甚至孕期、坐月子和哺乳期都被
-  <span href="https://www.secretchina.com/news/gb/tag/家暴" target="_blank">
-   家暴
+  综合陆媒报导，12月10日，黑龙江省东宁市新增1例
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;filedall=1&amp;q=%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E&amp;t=1" target="_blank">
+   武汉肺炎
   </span>
-  。也曾试过3次报警和1次验伤。
- </p>
- <p style="text-align:center">
-  <img alt="张漠寒微博发文控诉张培萌家暴（图片来源：微博截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2798011a225199106-ss.jpg" style="height:338px; width:600px"/>
-  <br>
-   张漠寒微博发文控诉张培萌家暴（图片来源：微博截图）
-  </br>
+  确诊病例。该病例是一名40岁男性，安徽太和县人孔某某，公司职工。12月9日在东宁海关核酸检测出阳性，经牡丹江市疾控中心核酸复核及专家会诊后，判定为轻型确诊病例。
  </p>
  <p>
-  文中指，不管是清醒还是酒后，只要一言不合，张培萌就会扇嘴巴、掐脖子、甚至抓着头发撞墙、用脚踹或抓着胳膊把人抡到地上，导致她身上只有不间断的淤青。而每次家暴后，张培萌都极其诚恳的道歉，她为了女儿选择忍耐和原谅。
- </p>
- <p>
-  张漠寒在文中称，她曾问过
-  <span href="https://zh.wikipedia.org/wiki/%E5%BC%B5%E5%9F%B9%E8%90%8C" target="_blank">
-   张培萌
+  官方宣称，目前已经追踪到的相关联密接者均已落实集中隔离观察和核酸检测。并已对患者居住、活动等地区和场所实施封锁，相关人员和环境均进行核酸检测。牡丹江市、
+  <span href="https://www.secretchina.com/news/gb/tag/东宁市" target="_blank">
+   东宁市
   </span>
-  “为何这样对待她？”，其丈夫的回答是“运动员都这样，雄性激素高。”而让她不想再忍受下去的原因，是她发现了张培萌有婚外情，于是决定要离婚。
+  也立即启动三级应急响应。
  </p>
  <p>
-  2020年7月1日，她收到张培萌的
-  <span href="https://www.secretchina.com/news/gb/tag/离婚" target="_blank">
-   离婚
+  此外，伊春市疫情工作领导小组指挥部第45号通告也证实，
+  <span href="https://www.secretchina.com/news/gb/tag/绥芬河" target="_blank">
+   绥芬河
   </span>
-  协议。7月17日，被张培萌收走家中钥匙后，带只有10个月大的孩子回哈尔滨老家，正式开始分居并远程协调离婚协议。但其后，因为孩子抚养权问题，两人发生了分歧。
+  12月10日新增本土武汉肺炎确诊病例1例。有当地民众称进出城已经遭到严控，绥芬河市时隔半年再次封城。
+ </p>
+ <p>
+  据家住绥芬河市的市民透露，早上到客车站被告知需要退票，客车站已经停运，高速路口也不允许出城，进城人员被劝返。她还说道：“想问疫情防控部门，如果做了核酸检测有车来接是否可以，但指挥部电话一直无法接通”。
+ </p>
+ <p>
+  另据绥芬河火车站附近某酒店负责人称，绥芬河市目前进出城都已严格管控。他还透露，10日上午就接到通知，酒店不能接待新客，并且已被政府征用。目前公路已经完全封锁，火车也只进不出。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,29 +93,26 @@
   </div>
  </center>
  <p>
-  而让
-  <span href="https://www.secretchina.com/news/gb/tag/张漠寒" target="_blank">
-   张漠寒
+  伊春市疫情工作指挥部12月10日消息，将对11月26日以来全市范围内具有牡丹江东宁市、绥芬河市旅居史、确诊病例接触史及大数据推送的几类人员进行全面排查。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不仅如此，
+  <span href="https://www.secretchina.com/news/gb/tag/黑龙江" target="_blank">
+   黑龙江
   </span>
-  更无法忍受的是，2020年8月24日下午，张培萌带几名男性埋伏在她家楼下，趁张漠寒不在家，袭击了她的母亲及四姨，并进屋抢走了孩子。自此之后，张漠寒已经有52天没有见到孩子了。她曾试图去张培萌家找孩子，但都被保安拦阻。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="张漠寒微博发文控诉张培萌家暴（图片来源：微博截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2798012a589545642-ss.jpg" style="height:336px; width:600px"/>
-  <br>
-   张漠寒微博发文控诉张培萌家暴（图片来源：微博截图）
-  </br>
+  绥化市疾控中心、明水县疾控中心、肇东市疾控中心也相继发布紧急提醒，称如非必要，近期请不要前往东宁市和绥芬河市。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +127,7 @@
   </div>
  </center>
  <p>
-  张漠寒表示，由于事情发生至今，“我的沉默和容忍并没有带来任何好的作用和结果，反而让家人受到了伤害，每天生活在恐惧之中。”她决定为了孩子和家人，将不再忍耐，写文章曝光这些内容。
+  大陆网友纷纷留言表示担忧：“快过年了，大学生都想回家，可怎么办啊。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +142,7 @@
   </div>
  </center>
  <p>
-  她在文中说：“作为一个女人，我想结束这段婚姻，结束这种生活。作为一个母亲，希望女儿可以远离‘暴力’和‘暴脾气’。作为一个女儿，不能接受母亲和家人不明不白被入室殴打，每天生活在恐慌之中。我相信法律的公平也等待对方得到应有的惩罚。”
+  “一旦开始，就是遍地开花，真可怕啊。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,22 +157,7 @@
   </div>
  </center>
  <p>
-  最后，她表示想用自己的亲身经历警醒所有的女性，面对家庭暴力不要妥协，离开才是爱护自己。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  对于张漠寒的指控，有陆媒联系到张培萌经纪团队，对方回应称所谓“婚外情”系无中生有。对于家暴则称北京警方经调查后，对家暴报案不予以支持。
+  “我不想过年连家都回不去啊。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,11 +175,8 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p style="text-align:center">
-  <img alt="张培萌经纪团队回应张漠寒的指控（图片来源：微博截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2798013a145663915-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   张培萌经纪团队回应张漠寒的指控（图片来源：微博截图）
-  </br>
+ <p>
+  “黑龙江今年也太难了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -215,11 +191,7 @@
   </div>
  </center>
  <p>
-  公开资料显示，张培萌生于1987年，祖籍
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  北京，是中国田径运动员，与苏炳添并称中国百米双雄，2005年进入国家队。于2017年9月宣布退役，并于2018年1月底宣布转攻冬奥俯式冰橇项目。1992年8月份出生于黑龙江省哈尔滨市的张漠寒，毕业于中国传媒大学，是中国内地足球解说员、主持人。2018年8月份两人公开恋情，2019年5月20日张培萌求婚成功。同年6月9日两人于北京举行婚礼。
+  “我们要源头，怎么感染上的？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,7 +206,7 @@
   </div>
  </center>
  <p>
-  两人高调结婚一年后，张漠寒在微博指控张培萌家暴，也让一众网友唏嘘不已。
+  “完了，刚吃了绥芬河发来的蛋糕，我害怕。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -248,11 +220,8 @@
    </center>
   </div>
  </center>
- <p style="text-align:center">
-  <img alt="网友纷纷留言评论（图片来源：微博截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2798061a211172013-ss.jpg" style="height:336px; width:600px"/>
-  <br>
-   网友纷纷留言评论（图片来源：微博截图）
-  </br>
+ <p>
+  “病毒都打起游击了，可怕。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -316,13 +285,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949450.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949450.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949450.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949450.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955342.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955342.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955342.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/10/955342.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949450.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955342.md' width='0px' height='0px'/>
