--- a/pages/p5/955354.md
+++ b/pages/p5/955354.md
@@ -1,4 +1,4 @@
-### 深圳成大湾区“重要引擎”香港变配角(图)
+### 中国官方称粮食又“丰收” 原来都是买来的(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img src="https://img3.secretchina.com/pic/2020/10-15/p2796911a539014414-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="武汉肺炎 疫情 粮食" src="https://img2.secretchina.com/pic/2019/6-11/p2443181a899161402-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   深圳成大湾区“重要引擎”香港成配角被规划。（图片来源：自由亚洲电台）
+   中国进口粮食规模创纪录新高。（图片来源：Chepko Danil/Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,77 +21,61 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月15日讯】中国国家主席
+  【看中国2020年12月10日讯】（看中国记者文龙综合报导）在
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
+   疫情
   </strong>
-  于周三（14日）上午，出席“
+  封城禁足措施及粮田遭遇虫害和洪水的情况下，12月10日，中国官方称今年
   <strong>
-   深圳
+   粮食
   </strong>
-  经济特区建立40周年庆祝大会”，他今次的讲话，首次表述“以深圳成为
-  <strong>
-   大湾区
-  </strong>
-  重要引擎”，取代去年“以香港、澳门、广州、深圳四大中心城市”作为核心引擎的讲法。种种迹象显示，香港日后的规划，不但要听命于北京，还要依附于深圳。
+  又“丰收”，并且比去年增0.9%。但是，中国进口粮食规模创纪录新高。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  习近平在接近一个小时的讲话中，讲述了
-  <span href="https://www.secretchina.com/news/gb/tag/深圳" target="_blank">
-   深圳
+  12月10，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  过去40年成长经历，但只字未提香港曾担当过的关键角色。
+  国家统计局今天公布，今年又是“丰收”年，总产量为即6695亿公斤，比去年增加56.5亿公斤，年增0.9%。
  </p>
  <p>
-  根据官方数字，截至1988年，即在深圳特区成立后第八个年头，投资在深圳的外资，
-  <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
-   香港
+  其发布的信息显示，中国粮食总产量是连续第6年保持在6500亿公斤以上。多数省分
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%B2%AE%E9%A3%9F" target="_blank">
+   粮食
   </span>
-  资金占70%，而在深圳的外资企业中，香港企业占总数85%。
+  增产，今年31个省（区、市）中26个增产，其中，河南、山东、山西、河北、新疆粮食产量均增加5亿公斤以上。
  </p>
  <p>
-  在谈到未来
-  <span href="https://www.secretchina.com/news/gb/tag/大湾区" target="_blank">
-   大湾区
+  中国国家统计局农村司长李锁强解读称：“尽管部分地区洪涝灾害和台风对生产造成一定影响，但……对
+  <span href="https://www.secretchina.com/news/gb/tag/粮食" target="_blank">
+   粮食
   </span>
-  规划时，习近平确定了深圳的主导地位，是大湾区建设的“重要引擎”。去年由中共中央、国务院，公布的《粤港澳大湾区发展规划纲要》，当时在“第二节完善城市群和城镇发展体系”的表述则为“以香港、澳门、广州、深圳四大中心城市作为区域发展的核心引擎”。
+  生产影响有限。”
  </p>
  <p>
-  当时的讲法为四个城市“继续发挥比较优势”，香港的角色是：“巩固和提升国际金融、航运、贸易中心和国际航空枢纽地位”；而深圳的角色，则是“发挥作为经济特区、全国性经济中心城市和国家创新型城市的引领作用”，与现时最新的说法有明显分别。
+  李锁强表示，稻谷播种面积增加，玉米持平，小麦减少。面对突然发生的
+  <span href="https://zh.wikipedia.org/zh-cn/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E" target="_blank">
+   武汉肺炎
+  </span>
+  疫情，为确保粮食安全稳定生产，官方加大对水稻生产的扶持力度。
  </p>
  <p>
-  <strong>
-   评论：香港剩余价值结束后就自生自灭
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  香港时事评论员刘锐绍对自由亚洲电台表示，中共最近发表的深圳改革实施方案，已清楚说明深圳是一个引擎作用，中国发展的龙头已转移至大陆，尤其是深圳。
+  中国大陆财新网报导，粮食丰收但粮价仍处于高位。根据中国国家粮食与物资储备局日前公布的监测价格，中国玉米价格年涨幅已达37%，是历史高位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -106,7 +90,11 @@
   </div>
  </center>
  <p>
-  刘锐绍：“深圳是一个引擎作用，即是说龙头已经不言而喻，转到大陆，尤其是深圳，它很希望将香港的力量转移到大陆，对于香港的现状，采取一种，仍然有剩余价值的就不断用，当剩余价值结束后，香港到时就自生自灭。”
+  不过，武汉肺炎
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%96%AB%E6%83%85" target="_blank">
+   疫情
+  </span>
+  年初爆发以来，中国不断采购外国粮食。中国海关数据显示，2020年前9个月，中国的大麦、玉米、高粱和小麦进口量同比增加83.3%至2086万吨，而且预计粮食进口规模还将创出更高纪录。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,7 +109,7 @@
   </div>
  </center>
  <p>
-  习近平指要推动粤、港、澳三地经济运行的规则、机制对接，并具体点明，加快城际铁路建设，人员、货物等便捷流动，提升“市场一体化”。
+  虽然中国官方声称粮食丰收，但是粮食危机正步步逼近，中国30年来首次从印度进口大米。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -136,7 +124,7 @@
   </div>
  </center>
  <p>
-  他说要以“大湾区综合性国家科学中心”为“抓手”，加强与港澳创新资源协同配合。今年3月中国国家部委文件首次表明，深圳成为全国第4个综合性国家科学中心。可见，讲法确立深圳将主导高科技发展，港澳角色为协同配合。另外，他又说要增强“港澳台同胞”投资；吸引港澳青少年来内地学习、就业、生活，“增强对祖国的向心力”。
+  据印度媒体12月2日报道，印度粮食官员表示，由于泰国、缅甸和越南的大米供应趋紧，中国已开始从印度进口大米，这是近30年来的首次。印度贸易商已签订合同，将从12月至明年2月向中国出口10万吨碎米（非巴斯马蒂香米，non-basmati），价格为每吨300美元左右，这是全球市场上最便宜的价格。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +139,7 @@
   </div>
  </center>
  <p>
-  值得留意，今年香港特首林郑月娥被安排坐在台上最右侧，有别过往香港特首的座位都在台下较远处，显示香港在最新政策中亦成为规划的一部分。而林郑身旁为现任全国政协副主席，国家发展和改革委员会主任何立峰、全国政协副主席，前特首梁振英、前政协副主席前特首董建华等。
+  印度是世界上最大的大米出口国，中国是最大的大米进口国。中国传统的供应商泰国、越南、缅甸和巴基斯坦由于出口的剩余供应有限而提高了价格。据贸易官员称，这些国家的报价至少比印度高出每吨30美元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,9 +154,41 @@
   </div>
  </center>
  <p>
-  <strong>
-   经济学者：在围堵下深圳取代香港发展金融
-  </strong>
+  泰国是世界第二大大米出口国，也是中国的主要大米供应国。泰国今年遭遇了旱灾，大米收成受到影响。2020年，泰国输往中国的运输量为20年来的最低水平。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “泰国、缅甸和越南由于供应有限而陷入困境。中国最终别无选择，只能从印度购买大米，”印度最大大米出口商Satyam Balajee执行董事Himanshu Agarwal表示。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在今年武汉肺炎
+  <span href="https://www.secretchina.com/news/gb/tag/疫情" target="_blank">
+   疫情
+  </span>
+  和洪水灾害破坏下，中国粮食实际大幅减产，有中国大陆媒体估算过，减产幅度达到三成。但是，官方并未公布具体数字。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +207,7 @@
   </ins>
  </center>
  <p>
-  经济学者罗家聪认为，习近平加重深圳角色主导角色，主要是因为中国经济未来主要发展，将集中在“高科技”及“金融”两方面。
+  中国官方宣称粮食“丰收”，但是今年大量进口粮食，这说明官方在说谎。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,7 +222,7 @@
   </div>
  </center>
  <p>
-  罗家聪：“深圳主要发展的是高科技、香港却搞不起；金融就相反，香港发展得起，而深圳一直都发展不起。（中国）被围堵之下，美金金融越来越难做，要拿美金越来越难。你看现在香港金融管理局的美元外汇储备由46%、47%跌到41%、42%，近期跌得很急，正流走相当比例的资金。如果被人围堵，（中国在）美金这个国际金融中心做不下去的话，她也要发展金融，就选择自己发展人民币。人民币的话，香港也不多，正常来说她自己要搞金融中心，就到深圳去搞。”
+  据《自由亚洲》电台12月4日报道，武汉居民高先生说，超市的高粱和大米等食品都在悄悄加价：“原来两元一斤的高粱，现在卖到四、五元一斤。大米价格现在都不好说了，它几时涨的都不知道，反正今年涨了。上个月买的东北延寿的大米，4.5元一斤。到明年春天可能就危险了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -217,7 +237,7 @@
   </div>
  </center>
  <p>
-  事实上，林郑月娥原订在周三宣读施政报告，但临时被北京喊停，要安排她出席深圳特区成立40周年大会，她的施政报告要押后至11月，即是在中共五中全会公布十四五规划后，才能按照中国整体规划，重新撰写香港的施政报告。
+  中国一位从事粮食买卖的唐先生说，近二十年，中国粮食和副食品的需求非常庞大，其中一部分来自境外：“十年前，国家统计局的一个处长跟我说，中国的食品进口，食品对外依赖度，主副食需求合共大概百分之六十至六十五之间。我觉得现在中国的粮食，主副食对外依赖度，可能会超过百分之七十。大米问题更加严重，因为现在大部分人种植水稻，无钱可赚。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -232,7 +252,7 @@
   </div>
  </center>
  <p>
-  另外，今年大会也表彰四十名人士，当中香港商人仅有合和实业主席胡应湘。然而2010年深圳经济特区成立30周年时，胡锦涛以超规格单独接见香港首富李嘉诚。
+  唐先生说，与大学毕业生找不到工作及工人失业比较，缺粮更容易触发社会动乱：“未来几年，中国粮食进口问题可能是一个全世界的大问题。中国从东南亚地区的粮食进口数量必会成倍增加，对东南亚地区安全，物价稳定有巨大冲击作用，东南亚地区由于中国大量购买，导致粮食涨价。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -247,7 +267,7 @@
   </div>
  </center>
  <p>
-  版权所有©2006,RFA。经Radio Free Asia,2025 MSt.NW,Suite 300,Washington DC 20036许可进行再版。http://www.rfa.org。
+  武汉肺炎疫情全球流行，一度引发了国际粮食市场波动。联合国世界粮食计划署与粮农组织共同发布的《严重粮食不安全热点地区早期预警》，给出了具体的信息，“至少25个国家今年将面临严重饥荒风险，全球濒临50年来最严重的粮食危机”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -311,13 +331,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949301.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949301.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949301.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/15/949301.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955354.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955354.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955354.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/10/955354.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949301.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955354.md' width='0px' height='0px'/>
