--- a/pages/p1/955359.md
+++ b/pages/p1/955359.md
@@ -1,4 +1,4 @@
-### 习近平南巡 演群众的女子被网友“人肉”出来了？(图)
+### 中国驻美使馆转推川普？馆方称被骇 网络爆红(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="潮州演群众的女子是来自千里之外的基层干部（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2020/10-16/p2797931a497880836-ss.jpg"/>
+  <img alt="川普 推特 " src="https://img3.secretchina.com/pic/2020/12-10/p2835591a415780082-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   潮州演群众的女子是来自千里之外的基层干部（图片来源：视频截图）
+   （图片来源：推特／川普）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,65 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月16日讯】（看中国记者苗薇综合报导）
+  【看中国2020年12月10日讯】（看中国记者黎小葵综合报导）美国大选尚未尘埃落定，除拜登本人丑闻不断曝光外，其团队班底也受到不小质疑，日前现任总统
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
    </span>
   </strong>
-  第三次
+  在关键州发起法律战，同时在
   <strong>
-   南巡
+   推特
   </strong>
-  ，首站到潮州，习在步行街向围观“民众”讲话，网上有传这些人都是“
+  发文批评此次选举存在诈欺、舞弊行为，没想到，
   <strong>
-   临时演员
+   中国驻美大使馆
   </strong>
-  ”。10月14日，网友人肉出一个在潮州演群众的女子，其实是来自千里之外某地的一个基层干部。网友挖出了这名女子在某地餐馆用餐的视频。不过，目前仍无法证实该女子是外地基层干部。
+  竟也转推，一时间窜红网络。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合媒体报导，
-  <span href="https://zh.wikipedia.org/zh-hans/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
-  </span>
-  本次南巡，主要是参加深圳特区成立40周年的庆祝活动。习12日下午到了广东潮州，在步行街与“民众”会面，视频所见，所有人都没有戴口罩。网友爆料，所有现场的所谓“民众”都是演员。
+  美东时间12月9日下午2时左右，川普发推文指控民主党在总统大选中作票，内容写道“如果有人在选举中有欺骗行为，一定是民主党干的，那为什么选举结果不能立刻被推翻？怎么可以这样治理一个国家？”
  </p>
- <p>
-  署名“唐嫣”的推友10月14日转发网友人肉搜到在潮州演群众的女子的视频，并讥讽说：“党的好演员，党的好干部，党性十足。 这千里之外去潮州演群众的女子做为一个生活优越的基层干部。这素质与党性真的很配。”
+ <p style="text-align:center">
  </p>
  <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="zh">
-   党的好演员，党的好干部，党性十足。
-   <br>
-    <br>
-     这千里之外去潮州演群众的女子做为一个生活优越的基层干部。这素质与党性真的很配。
-     <span href="https://t.co/3NMknrjCU5">
-      pic.twitter.com/3NMknrjCU5
-     </span>
-    </br>
-   </br>
+  <p dir="ltr" lang="en">
+   If somebody cheated in the Election, which the Democrats did, why wouldn’t the Election be immediately overturned? How can a Country be run like this?
   </p>
-  — 唐嫣 (@Tiffany__Tang)
-  <span href="https://twitter.com/Tiffany__Tang/status/1316235879145304064?ref_src=twsrc%5Etfw">
-   October 14, 2020
+  — Donald J. Trump (@realDonaldTrump)
+  <span href="https://twitter.com/realDonaldTrump/status/1336730906107768842?ref_src=twsrc%5Etfw">
+   December 9, 2020
   </span>
  </blockquote>
  <p>
  </p>
  <p>
-  网友的评论：
+  几分钟后，
+  <span href="https://www.secretchina.com/news/gb/tag/中国驻美大使馆" target="_blank">
+   中国驻美大使馆
+  </span>
+  竟也转发了这则推文，引发大批推特用户关注和联想。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,7 +85,101 @@
   </div>
  </center>
  <p>
-  “职务：首长随行。”
+  路透社一名记者看到相关转推动作后，便转推了中国驻美大使馆的转推，还说“它这个转推有意思”。前《纽约时报》驻京记者也在自己
+  <span href="https://www.secretchina.com/news/gb/tag/推特" target="_blank">
+   推特
+  </span>
+  上发表截屏证实此事，他还说，他认为中国驻美使馆转贴川普这则内容是代表中方支持川普政府。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="en">
+   Interesting retweet
+   <span href="https://t.co/5pdxSdPQyu">
+    pic.twitter.com/5pdxSdPQyu
+   </span>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — davidshepardson (@davidshepardson)
+  <span href="https://twitter.com/davidshepardson/status/1336731618145431554?ref_src=twsrc%5Etfw">
+   December 9, 2020
+  </span>
+ </blockquote>
+ <p style="text-align:center">
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="en">
+   This is notable — and a key marker for those who say Trump’s actions help China: The Chinese embassy in the US has retweeted Trump’s fake claim of election fraud. For autocrats, Trump is helping delegitimize democracy and eroding US standing. Putin has repeated his arguments too.
+   <span href="https://t.co/HCEg5kOl4J">
+    pic.twitter.com/HCEg5kOl4J
+   </span>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — Edward Wong (@ewong)
+  <span href="https://twitter.com/ewong/status/1336742141264072705?ref_src=twsrc%5Etfw">
+   December 9, 2020
+  </span>
+ </blockquote>
+ <p>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +194,7 @@
   </div>
  </center>
  <p>
-  “只要社交媒体一直存在，就会有抓包的可能！！ 而且80后都开始步入30岁40岁了，正好是基层办事员、干部的中坚群体中坚力量。众多80后有哪个不发个朋友圈、小视频、自拍照的？”
+  那么，中国驻美使馆在其官方推特账号上是否真的转推了川普相关帖文？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,52 +209,7 @@
   </div>
  </center>
  <p>
-  “以后得多换些演员了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “这属于政治事故，把导演拉出去枪毙！”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “当场失业。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “明明知道全是演员，认真表演进入忘我境界，这叫无耻的最高境界！不服不行！”
+  对此，中国驻美大使馆发推文称，他们的帐号在当日下午被黑客攻击。馆方还强调，在12月9日完全没有转推任何推文。不过，对于中共推特遭骇客攻击的真实性，网上则存在诸多怀疑声，有人认为是错误操作，也有人说是有意为之。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +228,7 @@
   </ins>
  </center>
  <p>
-  “群众都是假的，都是政府工作人员。”
+  事实上，这已不是中国外交帐号第一次出包，驻英大使刘晓明和外交部发言人赵立坚都曾被抓包在推特上点赞、关注AV女优、色情片，第一时间也都辩称帐号被骇，甚至惊动中共高层要求调查刘晓明帐号，但推特内部透露调查结果，判定帐号是本人或身边人操作，不存在异常。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -203,26 +243,7 @@
   </div>
  </center>
  <p>
-  “这次估计动用部队演员才行，上次公安局治安队长抱小孩充当群众，这次？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  时事评论员袁斌表示，习近平在当年
-  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
-   江泽民
-  </span>
-  胡锦涛等党魁去他的地盘视察时，习安排“演员”在现场扮演群众。习登上大位后去全国各地视察，他能不知道自己一路见到的群众是谁吗？明明知道现场的群众都是“演员”，却装作不知道，表现的就像是见到真的群众，在与他们互动一般，领导们其实也是演员，也在演戏。说白了，这就是一场领导和“群众”同台演出的亲民秀。好在看破这一点的明白人现在越来越多，大家都知道他们是在演戏，没多少人会当真，只剩当事官员在那里无聊的自嗨了。
+  稍早前，川普还曾发表多篇推文，称从来没有候选人赢下佛罗里达州和俄亥俄州后，却输掉总统大选，“我赢下这2个州，而且赢很多。”川普指出，大家很快就会学习“勇气”一词，并拯救美国，他同时强调在所有的摇摆州，他都拿下比对手多的“合法选票”，投票后的所有数据都如此显示，他质疑除非被“动手脚”，否则根本不可能败选。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -237,10 +258,57 @@
   </div>
  </center>
  <p style="text-align:center">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-13/p2795241a592855173-ss.jpg"/>
-  <br>
-   习近平10月12日到潮州。（图片来源：视频截图）
-  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="en">
+   We will soon be learning about the word “courage”, and saving our Country. I received hundreds of thousands of legal votes more, in all of the Swing States, than did my opponent. ALL Data taken after the vote says that it was impossible for me to lose, unless FIXED!
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — Donald J. Trump (@realDonaldTrump)
+  <span href="https://twitter.com/realDonaldTrump/status/1336691515398250498?ref_src=twsrc%5Etfw">
+   December 9, 2020
+  </span>
+ </blockquote>
+ <p>
+  而在地球的另一边中国，关于一切涉及美国大选、支持川普、香港新疆等内容，微博几乎全部删除。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此前的11月上旬曾有大陆网友发起微博投票行动，内容包括“美国大选还有人在关注选票吗？”“你觉得谁能当选？”“川普推要求停止计票调查”、“多家美媒掐断川普讲话直播”。但之后相关内容都遭到删除。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -304,13 +372,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949452.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949452.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/949452.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949452.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955359.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955359.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955359.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/10/955359.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/949452.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955359.md' width='0px' height='0px'/>
