--- a/pages/p6/932501.md
+++ b/pages/p6/932501.md
@@ -1,4 +1,4 @@
-### 华为断臂求生 欲售旗下重要品牌荣耀（Honor）(图)
+### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="华为 荣耀 芯片" src="https://img3.secretchina.com/pic/2020/9-18/p2779082a170024329-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
   <br>
-   有消息传出华为要出售荣耀品牌和相关业务。（图片来源：Adobe stock）
+   英俊战士战斗机。（图片来源：公有领域）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,64 +21,63 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月15日讯】（看中国记者文龙综合报导）此前
+  1940年10月开始，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-    华为
+   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
+    纳粹
    </span>
+   德军
   </strong>
-  消费者业务CEO余承东表态，要把
+  对
   <strong>
-   荣耀
+   英国
   </strong>
-  （Honor）品牌排名做到中国前二，全球前四。然而，美国禁令不断升级，没有
+  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
   <strong>
-   芯片
+   飞行员
   </strong>
-  的华为求生存，现在有消息传出华为要出售荣耀品牌和相关业务。
+  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  2019年4月2日，华为消费者业务CEO余承东在微博上发文透露目标：“
-  <span href="https://zh.wikipedia.org/zh-cn/%E5%8D%8E%E4%B8%BA" target="_blank">
-   华为
-  </span>
-  消费者业务已经发展到一个全新的历史阶段，今年华为+荣耀很可能成为全球第一手机厂商。未来，我们必须坚定方向，撸起袖子，埋头苦干：第一，华为单品牌未来要做到全球第一。第二，荣耀品牌做到中国前二，全球前四。”
+  <strong>
+   胡萝卜“造就”空中英雄？
+  </strong>
  </p>
  <p>
-  不过，来自美国的禁令打乱了华为的全球布局。曾信心十足进入“中国前二，全球前四”的
-  <span href="https://zh.wikipedia.org/zh-cn/%E8%8D%A3%E8%80%80" target="_blank">
-   荣耀
+  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
+  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
+   空军
   </span>
-  ，近期更是陷入被出售的传闻中。
+  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
  </p>
  <p>
-  10月14日，有消息曝出，华为正与神州数码及其他竞购者进行洽谈，商讨以最高人民币250亿元的交易金额出售部分
-  <span href="https://www.secretchina.com/news/gb/tag/荣耀" target="_blank">
-   荣耀
+  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
+  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
+   飞行员
   </span>
-  智能手机业务。消息传出后，神州数码股票14日涨幅一度达10%。其他潜在买家包括TCL和小米（Xiaomi Corporation）。相关知情人士表示，此交易可能是现金交易，计划出售的资产尚未确定，但可能包括荣耀的品牌、研发能力和相关的供应链管理业务。
+  视力大增，很可能与他们的食物有关。
  </p>
  <p>
-  综合
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  大陆媒体10月15日报道，各媒体询问荣耀、华为、神州数码及小米等企业，均对此报道未予置评。华为方面有内部人士对外表示消息不实，但集团官方目前并没有发布公开口径。
+  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
  </p>
  <p>
-  荣耀产品线诞生于2011年9月，2013年12月，荣耀开始独立运营，荣耀品牌的诞生正是为了应对小米的互联网手机模式，它的出现补足了华为当时缺失的线上市场。
+  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
+  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
+   德军
+  </span>
+  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,26 +92,11 @@
   </div>
  </center>
  <p>
-  在2018年中国手机市场，多数品牌销量持续下滑，排名前十的品牌中仅Vivo、荣耀、华为呈上升态势，而荣耀超越了小米，位列第三。而在手机以外，荣耀还推出了电视等产品。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  由此可见，虽然无法和华为相比，但荣耀也具有巨大的竞争力和品牌价值。不过，荣耀之所以崛起，与华为的支持密不可分。荣耀与华为两个品牌在
-  <span href="https://zh.wikipedia.org/zh-cn/%E8%8A%AF%E7%89%87" target="_blank">
-   芯片
+  档案显示，早在1937年，英国就研制出世界上第一部
+  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
+   机载雷达
   </span>
-  、算法、操作系统，甚至到通信、材料及终端应用上，都能共享华为集团的研究成果。所以，分析师指出，出售荣耀的传闻并非空穴来风，此事在逻辑上存在一定的合理性。
+  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +111,9 @@
   </div>
  </center>
  <p>
-  在今年5月15日，美国商务部发布禁令，任何企业将含有美国技术的半导体产品给华为，必须先取得美国政府的出口许可，禁令实施前有120天的缓冲期，9月14日为缓冲期的最后一天。
+  <strong>
+   德军恐惧的“寂静死神”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,7 +128,7 @@
   </div>
  </center>
  <p>
-  8月17日，禁令进一步升级，美国政府在“实体清单”上新添了38家华为子公司，扩充后的实体清单上总共有152家华为关联公司。同时宣布，无论在交易的哪一个阶段，只要有华为公司参与，那么世界上任何公司未经许可都不得出售用美国软件或设备制造的半导体。
+  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,11 +143,7 @@
   </div>
  </center>
  <p>
-  华为面对此前的禁令，只要不是专门为华为设计的
-  <span href="https://www.secretchina.com/news/gb/tag/芯片" target="_blank">
-   芯片
-  </span>
-  尚能采购现货。但禁令接连升级，各企业理论上无法再向华为销售，这条路也被堵死。9月15日起，华为难以再从商业途径获得芯片。
+  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -176,7 +158,7 @@
   </div>
  </center>
  <p>
-  华为旗下的产品，从手机、5G基站，再到服务器，甚至各种物联网设备，无不仰赖芯片。对于一家硬件为主的科技企业而言，没有芯片就没有产品，没有产品，企业也难以生存。
+  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -195,7 +177,9 @@
   </ins>
  </center>
  <p>
-  日前，日本科技实验室Fomalhaut Techno Solutions拆解华为5G基站中被称为基带的核心装置后发现，其仍有27.2%的组件依赖美国供应商，且主要的半导体器件是由台积电（TSMC）提供，意味着华为正使用该公司先前囤积的芯片。
+  <strong>
+   成功的关键是团队合作
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -210,7 +194,7 @@
   </div>
  </center>
  <p>
-  华为5G基站的生产成本约1,320美元，中国设计的零部件比例约占48.2%，其中四分之一是华为委托台积电（TSMC）生产的被称为中央处理器的半导体。由于美国加强管制，这些零部件有可能无法使用。而中国组件的价值中，大部分由海思的基频芯片所占，但海思的基频芯片是由台积电代工。
+  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +209,7 @@
   </div>
  </center>
  <p>
-  华为5G基站也依赖美国供应商莱迪思半导体（Lattice Semiconductor）和赛灵思（Xilinx）公司的产品。对基站不可缺少的电源进行控制的半导体是美国德州仪器（TI）和安森美半导体（ON Semiconductor）等的产品。
+  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,22 +224,7 @@
   </div>
  </center>
  <p>
-  此外，韩国零部件的使用数量仅次于美国，内存由三星电子制造，日本企业的零部件有TDK和精工爱普生等的产品。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  Fomalhaut Techno Solutions指出，虽然华为5G基站的一些零件是由中国制造商提供，但就零件数量而言，中国产零件在华为5G基站中的占比不足1%，显示华为的5G基站仍高度倚赖美国制造的零件。
+  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -319,13 +288,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949355.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949355.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949355.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/15/949355.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949355.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
