--- a/pages/p5/955477.md
+++ b/pages/p5/955477.md
@@ -1,4 +1,4 @@
-### 苹果促台湾供应商撤出产能 中国代工成历史
+### 英国与欧盟设定达成贸易协议的截止日期
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,23 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年10月16日讯】美国
-  <span href="https://www.secretchina.com/news/gb/tag/苹果公司" target="_blank">
-   苹果公司
-  </span>
-  刚发布新一代iPhone 12系列手机，近日传出
+  【看中国2020年12月11日讯】12月9日，
   <strong>
-   苹果公司
+   <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
+    英国
+   </span>
   </strong>
-  要求台湾台积电、鸿海等多家
+  首相约翰逊与
   <strong>
-   供应链
+   欧盟
   </strong>
-  厂商，将15%至30%的生产线撤出中国大陆。有学者认为，外商在华
+  执委会主席冯德莱恩（Ursula von der Leyen）同意，应该在周日前（12月13日）就
   <strong>
-   投资
+   贸易
   </strong>
-  只因劳动力成本低，目前看来，中国已失去诸多竞争优势。
+  谈判的未来做出“明确决定”。此前，双方在“坦率讨论”后并没有缩小分歧。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -34,48 +32,41 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  综合外媒报道，苹果为达致
-  <span href="https://www.secretchina.com/news/gb/tag/供应链" target="_blank">
-   供应链
-  </span>
-  多元化，在近期向台积电、鸿海等多家供应链厂商发通知，要求厂商将15%至30%的生产业务撤出中国。接获苹果通知的台湾厂商还包括纬创、和硕等台湾企业。
+  据《路透社》报导，英国首相办公室的一名资深消息人士说，双方差距仍然非常大，尚不清楚能否弥合差距。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  台湾《科技新报》10月14日报道，撤出
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  他表示，约翰逊想尝试所有可能达成
+  <span href="https://www.secretchina.com/news/gb/tag/协议" target="_blank">
+   协议
   </span>
-  大陆的台湾企业生产线将转移至越南、泰国、印度等国家。报导引述市场人士分析，苹果此举象征着过去30年西方企业设计产品后，由大陆工厂生产的时代结束，即科技行业一个时代的结束。未来苹果的大方向将是大陆厂商只生产向大陆销售的产品，销往其它国家的产品将由台湾企业在内的其它国家工厂生产。
+  的途径。约翰逊与冯德莱恩同意，让双方的谈判团队在未来几天内进一步商讨。
  </p>
  <p>
-  <strong>
-   外资撤离分散经营风险
-  </strong>
+  冯德莱恩也在另一份声明中呼应了英国对这次谈判的评论。
  </p>
  <p>
-  贵州大学经济学院前教授杨绍政本10月15日接受《自由亚洲》电台采访时表示，外商撤离中国是为了分散经营风险：“苹果公司要求台湾供应链厂商撤出30%的产能离开中国，我认为这是他分散风险的战略举措，即使没有中美交恶，就是一般的企业经营也不能将所有的鸡蛋放在一个篮子里面，这是
-  <span href="https://www.secretchina.com/news/gb/tag/投资" target="_blank">
-   投资
+  双方同意，在本周末（12月13日）前，就英国1月1日最终脱欧前是否可能达成协议做出决定。
+ </p>
+ <p>
+  报导称，外界担心，5年的英退危机将以混乱的无协议结尾收场。
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/欧盟" target="_blank">
+   欧盟
   </span>
-  的基本常识。”
- </p>
- <p>
-  杨绍政说，目前中美关系处于紧张时期。美国对中国采取各种制裁措施，增加了苹果公司在华经营风险：“更何况目前的中美关系确实属于比较紧张的状态，而且中国大陆自己在违反自己制定的宪法。比如宪法中言论自由的保护条款、宗教信仰自由等。”
- </p>
- <p>
-  印度科技部长普拉萨上个月表示，苹果已有8家代工厂从中国转移到了印度。金融学者司令说，苹果公司要求代工厂加速撤离中国：“转移到东南亚地区或南亚的印度、孟加拉国这样的劳动力成本更为低廉、利润空间更大的地区。这也表明中国正在丧失劳动力成本低廉的优势。可以说苹果公司，还有世界五百强很多企业从中国大陆撤离生产线，证明外界对中国的政策判断 ，也就是中国正在实施闭关锁国的趋势。”
+  和英国将周四（12月12日）的会议视为打破谈判僵局的机会，但双方均承认，存在达不成贸易协议的危险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,43 +81,86 @@
   </div>
  </center>
  <p>
-  <strong>
-   中国不会接纳市场经济
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  大连媒体人陶先生表示，中国40年来仍不遵守国际市场准则。而在华投资设厂的外商，亦愈来愈意识到中国不会接纳真正的市场经济体制，因此选择撤离：“这种独裁国家不适合自由经济下的商业活动，苹果公司在中国的代工也是台湾的企业，他们在中国设厂是因為廉价劳动力，本身处在产业链的末端。但是他给中国创造了很多就业和税收，接下来大部分外企都会撤走。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另据彭博社10月13日报道，中国航空工业集团公司可能成为继
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
+  今年1月，英国正式脱欧，不过此后进入了过渡期，在这期间英国依然留在欧盟单一市场及关税同盟，这代表有关
+  <span href="https://www.secretchina.com/news/gb/tag/贸易" target="_blank">
+   贸易
   </span>
-  、TikTok和WeChat之后，又一间受到美国制裁的企业。早在6月份，美国政府已将中航工业列入中国军方“控制或拥有”的公司名单中，指该公司与中国军方有关联。中航工业尚未对此公开回应。
+  、旅行，以及商务的规定仍保持不变。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  过渡期将在今年12月31日结束。如果到那时还没法达成贸易协议，双方企业都会遭殃。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  《路透社》报导称，约翰逊在稍早时候表示，欧盟要求英国未来遵守新的欧盟法规，否则将自动受罚，并坚决要求英国放弃对其捕鱼水域的主权控制。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  约翰逊对英国议会说，他不认为这些是英国任何首相应接受的条件。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  约翰逊还表示，如果欧盟取消要求，仍然可能达成“好的协议”，但无论有没有贸易协议，英国都将继续繁荣发展。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在疫情导致全球经济受冲击的局势下，双方无法达成协议，边境通关将出现拥堵、冲击金融市场，并致使供应链混乱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,13 +224,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949388.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949388.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949388.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949388.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955477.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955477.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955477.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/955477.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949388.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955477.md' width='0px' height='0px'/>
