同步于: 12月12日0时2分

--- a/pages/p5/955508.md
+++ b/pages/p5/955508.md
@@ -1,4 +1,4 @@
-### 逾40人联名致函欧洲议员 吁欧盟拒华为中兴5G
+### 若英无协议退欧 英股富时250指数最高跌10%
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,25 +7,25 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年10月16日讯】美国政治新闻媒体“Politico”报导，超过40位欧洲议会议员，包括前
+  【看中国2020年12月11日讯】摩根士丹利12月11日表示，如果
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
+    英国
+   </span>
+  </strong>
+  没能在
+  <strong>
+   退欧
+  </strong>
+  过渡期结束前与
   <strong>
    欧盟
   </strong>
-  执委会副主席安西普（Andrus Ansip）、欧洲议会对中关系代表团团长包瑞翰（Reinhard Bütikofer）等重量级跨党派成员，联名致函欧盟27国通讯部长、欧盟执委会官员，指中国
+  达成贸易协议，那么预计英国股市
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-    华为
-   </span>
+   富时250指数
   </strong>
-  、
-  <strong>
-   中兴
-  </strong>
-  通讯是“高风险”类别的供应商，对欧洲
-  <strong>
-   5G
-  </strong>
-  网络安全构成安全威胁，要求对两家中企切断公共资金，并将其排除在5G网络敏感部分之外。
+  （FTSE 250）将下跌6%～10%。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -36,42 +36,36 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  信函指出，根据中国法律规定，华为和
-  <span href="https://www.secretchina.com/news/gb/tag/中兴" target="_blank">
-   中兴
+  据《路透社》报导，英国首相约翰逊12月10日说，英国和
+  <span href="https://www.secretchina.com/news/gb/tag/欧盟" target="_blank">
+   欧盟
   </span>
-  通讯就像其他中国公司一样、都强制须遵守中国非民主威权政体的指令，“这包括利用网络来控制其（中国）人民，以及对西方政府、公司和民众进行间谍活动”；5G网络需确保可信任技术的安全解决方案，华为和中兴毫无疑问都是“高风险”供应商。
+  “很有可能”无法达成新的贸易协议。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  信函要求
-  <span href="https://www.secretchina.com/news/gb/tag/欧盟" target="_blank">
-   欧盟
+  摩根士丹利预估，在英国无协议
+  <span href="https://www.secretchina.com/news/gb/tag/退欧" target="_blank">
+   退欧
   </span>
-  27国展开“共同评估及分类”，对“高风险”供应商类别达成共识，以在欧洲5G无线网络敏感部分能排除华为、中兴通讯设备；并应确保没有欧洲资金、即纳税人的钱不会花在使用“高风险”电信设备供应商的技术。
+  的局势下，鉴于英国央行有较大的可能性会降息至负利率，英国银行股或将重挫10%～20%。
  </p>
  <p>
-  <strong>
-   美国矛头也锁定华为云端业务
-  </strong>
+  摩根士丹利由Graham Secker带领的股票策略师团队在一份报告中表示，英国无协议退欧的结果对市场来说是一个意外，但是相关的负面影响将会因为全球前景正面而得到缓和。
  </p>
  <p>
-  另彭博报导，华为除了被挤出欧洲
-  <span href="https://www.secretchina.com/news/gb/tag/5G" target="_blank">
-   5G
-  </span>
-  通讯设备市场外，美国正锁定其云端运算业务。美国国务院次卿柯拉克上周访问欧洲，会见德国电信执行长霍格斯、西班牙电信营运商MasMovil负责人史宾格，力促他们考量数据安全顾虑，应弃用中国云端基础设施供应商。他说，应“把这视为5G延伸。云端真的很重要，不论是云端服务或数据中心本身，这是一大问题”。
+  摩根士丹利还指出，如果英国无协议退欧，保险、房地产，以及房屋建筑商类股也同样面临风险。
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -111,13 +105,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949457.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949457.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949457.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/16/949457.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955508.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955508.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/955508.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/955508.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949457.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/955508.md' width='0px' height='0px'/>
