同步于: 12月12日0时52分

--- a/pages/soh6/452623.md
+++ b/pages/soh6/452623.md
@@ -1,4 +1,4 @@
-### 【选情更新12/11】多乔州议员支持德州起诉 德州议员提案：如选举系统崩溃将独立
+### 【选情更新12/11】德州议员提案：如选举系统崩溃 德州或宣布独立
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -19,13 +19,6 @@
   <span class="meta">
    【希望之声2020年12月11日】（本台记者凌杉综合报导）
   </span>
-  本周，乔治亚州的27位州参众议员共同支持
-  <ok href="/term/1636">
-   德州
-  </ok>
-  诉讼乔治亚州等四个战场州，要求撤销该州的选举结果。国会议员表示，州议员有权利进行该做法。
- </p>
- <p>
   周五（12月11日），
   <ok href="/term/1636">
    德州
@@ -34,7 +27,7 @@
   <ok href="/term/1045">
    美国
   </ok>
-  联邦政府的选举体系“已经实控”，他将提出法案确保
+  联邦政府的选举体系“已经失控”，他将提出法案，确保
   <ok href="/term/1636">
    德州
   </ok>
@@ -42,7 +35,14 @@
   <ok href="/term/1045">
    美国
   </ok>
-  脱离的权利。
+  联邦脱离的权利。
+ </p>
+ <p>
+  本周，乔治亚州的27位州参众议员共同支持
+  <ok href="/term/1636">
+   德州
+  </ok>
+  诉讼乔治亚州等四个战场州，要求撤销该州的选举结果。国会议员表示，州议员有权利进行该做法。
  </p>
  <p>
   以下是希望之声在12月11日为您整合的更新报道：
@@ -51,11 +51,11 @@
   <ok href="/term/1636">
    德州
   </ok>
-  州议员提案确保
+  州议员提案 确保
   <ok href="/term/1636">
    德州
   </ok>
-  独立权
+  拥有宣布独立的权利
  </h2>
  <p>
   <ok href="/term/1636">
@@ -130,7 +130,7 @@
   人民的选举权。
  </p>
  <h2>
-  乔治亚超过50万选票仍然无从查证
+  乔治亚州有超过50万选票仍然无从查证
  </h2>
  <p>
   乔治亚州县官员目前尚未出示超过83％以上的邮寄选票文件证明，以供查证。在该州，估计有60万的邮寄选票在本次选举中计数。
@@ -145,11 +145,11 @@
   根据《佐治亚州选举法紧急规则》规定，每个县都有责任记录在托运箱中拾取的缺席选票转移情况。
  </p>
  <h2>
-  27名乔治亚州议员支持
+  27名乔州议员支持
   <ok href="/term/1636">
    德州
   </ok>
-  起诉乔治亚州政府
+  起诉乔州政府
  </h2>
  <p>
   早些时候，乔治亚州州参议员威廉·利贡（William Ligon）宣布，该州的15位州参议员和12位众议员共同支持
