--- a/pages/nsc412/n12612906.md
+++ b/pages/nsc412/n12612906.md
@@ -46,6 +46,21 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 共和党候选人起诉华盛顿州务卿 要求审计
+</h3>
+<p>
+ 华盛顿州共和党州长候选人劳伦·卡尔普（Loren Culp）对华盛顿州州务卿金·怀曼（Kim Wyman）提起诉讼，并要求获得禁制令，同时要求对11月3日投下的纸质选票进行审计。
+</p>
+<p>
+ 据MyNorthWest报道，该诉讼还要求对国王（King）、克拉克（Clark）、瑟斯顿（Thurston）、皮尔斯（Pierce）、基萨普（Kitsap）和斯卡吉特（Skagit）各县的投票结果以及计票机进行审计。
+</p>
+<p>
+ “我们没有任何让步。我们会一直战斗，直到我们没有了选项——然后，我们会再战斗。”他的竞选团队周四（12月10日）在脸书声明中说。
+</p>
+<p>
+ （未完）
+</p>
+<h3>
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
