--- a/pages/p1/955474.md
+++ b/pages/p1/955474.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 中国人口性别比严重失衡 00后最突出(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+  <img alt="中国男女比例失衡问题显见，00后最为突出（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-12/p2836201a621403202-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   中国男女比例失衡问题显见，00后最为突出（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,76 +29,63 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  【看中国2020年12月12日讯】（看中国记者文俪综合报导）中国
   <strong>
-   万隆会议
-  </strong>
-  前夕，“
-  <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   <span href="https://www.secretchina.com/news/gb/tag/人口问题" target="_blank">
+    人口问题
    </span>
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  除了
+  <strong>
+   老龄化
+  </strong>
+  、生育率低和劳动力不足等外，还存在着
+  <strong>
+   男女性别比例
+  </strong>
+  严重
+  <strong>
+   失衡
+  </strong>
+  的问题。今日（11日），官媒报导指，盘点中国31个省市发现，00后男女性别比失衡书面最为突出。而性别比失衡带来的后果将直接体现在婚育问题上。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
- </p>
- <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+  综合陆媒报导，据《中国统计年鉴（2020）》显示，从年龄结构上区分，截至到2019年，中国性别比失衡的年龄段分别是10-14岁、15-19岁，而这两个年龄段的性别比分别为119.10、118.39。几乎是出现了1名女孩对应1.2名男孩的局面。意指，中国“00”后的
+  <span href="https://www.secretchina.com/news/gb/tag/男女性别" target="_blank">
+   男女性别
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
+  失衡最为突出。
  </p>
  <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
+  另外，目前刚刚步入适婚年龄的20-24岁年龄段，性别比达到114.61，男女
+  <span href="https://www.secretchina.com/news/gb/tag/失衡" target="_blank">
+   失衡
+  </span>
+  也很严重。与25-29岁年龄段的性别比106.65相比，出现明显的上升。
  </p>
  <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
+  而根据盘点，2019年，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  31个省区市中，有20地省区市的性别比低于全国平均水平。其中四川以96.7的性别比位列全国性别比最低地区。从2016年至2019年这四年的统计数据上看，四川有3年均出现了性别比低于100。是唯一一个女多男少的地区。重庆性别比为100.2，排名在倒数第二位。
+ </p>
+ <p style="text-align:center">
+  <img alt="2000年-2019年中国31省区市男女性别变化一览表（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-12/p2836202a314027244-ss.jpg" style="height:420px; width:600px"/>
+  <br>
+   2000年-2019年中国31省区市男女性别变化一览表（图片来源：微博）
+  </br>
  </p>
  <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  但值得一提的是，四川与重庆人口
+  <span href="https://www.secretchina.com/news/gb/tag/老龄化" target="_blank">
+   老龄化
+  </span>
+  问题均较为严重。据《中国统计年鉴（2020）》的抽样调查数据，四川、重庆两地65岁以上的老年人口占比都超过15%，明显高于全国平均水平，且已进入深度老龄化社会状态。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,39 +100,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   照常起飞中途爆炸坠海导致11人遇难
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
+  此外，根据《中国统计年鉴（2020）》抽样调查，天津男性与女性未婚人数的
+  <span href="https://www.secretchina.com/news/gb/tag/比例" target="_blank">
+   比例
+  </span>
+  为2：1，排名全国第一位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -161,7 +120,7 @@
  </center>
  <p>
   <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
+   男女性别比失衡带来的后果
   </strong>
  </p>
  <center>
@@ -177,7 +136,54 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+  目前来看，男女性别失衡在婚育方面的影响较为明显。女性的短缺带来的第一个问题就是，对目前中国达到适婚年龄的一代而言——新娘不够了。而新娘不够，也意味着下一代的生育也自然会受到影响。有专家预期，许多剩余男性这辈子都无法结婚，甚至有些男性可能会为了结婚而走极端。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此外，中国女性短缺，不仅会对中国造成影响，邻国也会受到波及。例如，人权观察在2019年2月份发布的报告中就讨论了其中的一个后果，即缅甸向中国的新娘贩卖。人口贩子通常以免费送往中国工作为饵，诱骗成年及未成年女性，然后再将她们以3000到13000美元的价格，卖给找不到媳妇的中国家庭。在被卖身后，这些女性通常就被锁在房间里遭受一再的性侵，目的则是尽快使她们怀孕，给家里添宝宝。在分娩后，有些女性在必须把孩子留下的前提下，可以被允许离开。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有证据显示，类似上述的新娘移民和贩卖也存在于柬埔寨、北韩和越南，甚至还可能出现在中国及其他邻国。而人中贩卖也仅仅是众多的后果之一，包括社会不稳定、劳动市场扭曲和经济转变等。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   计划生育一胎化政策是造成男女性别比失衡的重要原因
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +202,11 @@
   </ins>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
+  1979年6月陈云等人率先提出“一孩政策”，最后明确规定‘只准生一个’。1979年下半年起，中国大陆多地就按照一胎化的要求修改计划生育规定。1982年将“
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E8%AE%A1%E5%88%92%E7%94%9F%E8%82%B2" target="_blank">
+   计划生育
+  </span>
+  ”定为基本国策，同年12月写入宪法。1983年创下上环、绝育、人工流产手术数量的多项记录。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +221,7 @@
   </div>
  </center>
  <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  自古以来，中国农民靠天吃饭，劳力多家庭就富裕兴旺，而且家族香火的延续靠的是男丁。然而一胎化这一灾难性政策，使得很多农村家庭为了生男孩，不得不选择性生产，造成男婴比例的迅速增加。计划生育通过各种惩罚性手段，不仅抬高了生育成本，也极大的降低了女婴生存下去的概率。例如强制避孕、强制堕胎和虐杀女婴。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,9 +236,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   声东击西 周恩来让别人枉做了替死鬼
-  </strong>
+  在自然繁衍状态下，男女出生比例的正常值在103～107范围之内，即平均每出生100个女婴，就出生103～107个男婴。但由于男性在各年龄段的死亡率都偏高，所以总人口中的男女比例会逐渐趋于平衡。然而，由于中共计生政策的强行干预，中国男女比例失衡长期处于全球之最。2020年1月17日，据国家统计局公布的数据显示，男性人口71527万人，女性人口68478万人，总人口性别比为104.45（以女性为100）。男性仍然比女性多3049万。因此，有网友表示，不是这些男性找不到老婆，而是他们的老婆土里埋已有二十载。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,22 +251,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  有学者称，中共实施计划生育“一胎化”政策35年来，至少有4亿婴儿被强制堕胎，堪称人类历史上最大的浩劫。而随之带来的社会问题也是层出不穷，把中国百姓拖进苦难的深渊。目前，中国社会男女性别比例严重失调、老龄化加剧、“人口红利”将很快消失、“用工荒”等问题日趋严重，而这些问题带来的恶果不可能在短时间内逆转。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -322,13 +315,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955474.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955474.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955474.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/12/955474.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955474.md' width='0px' height='0px'/>
